--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliverytekaApp">
-        <activity android:name=".MedecineDetailActivity"></activity>
+        <activity android:name=".MedicineDetailActivity" />
         <activity android:name=".MedicinePriceListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
