--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.deliverytekaapp"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -47,7 +47,6 @@ dependencies {
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
-
     //Adapter Retrofit for RxJava
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
@@ -63,9 +62,17 @@ dependencies {
     //PICASSO
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'androidx.fragment:fragment:1.2.2'
+    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-service:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+
+    implementation "ru.tinkoff.decoro:decoro:1.1.1"
+
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
-    kapt "android.arch.persistence.room:compiler:1.0.0-alpha4"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
